Fix: getFirst() changed to get(0)